--- a/homepage/home.css
+++ b/homepage/home.css
@@ -14,20 +14,20 @@ section {
     background: white;
     width: 90%;
     left: 5%;
-    height: 500%;
+    height: 100%;
     box-shadow: 0px 0px 40px black;
     font-family: lato;
     color: #333;
-    border-radius: 10px;
+   border-radius: 10px;
     position: absolute;
 }
 
 section header {
-    background: rgba(227, 187, 188, 1);
+background: rgba(227, 187, 188, 1);
     color: black;
     font-size: 1.2em;
     font-weight: 600;
-    border-radius: 10px 10px 0 0;
+   border-radius: 10px 10px 0 0;
 }
 
 footer {
@@ -43,15 +43,15 @@ footer {
     right: 0;
 }
 
-section label {
+/*section label {
   margin-left: 20px;
   display: inline-block;
   margin-top: 30px;
   margin-bottom: 5px;
   position: relative;
-}
+}*/
 
-section input {
+/*section input {
 
   display: block;
   width: 78%;
@@ -61,4 +61,4 @@ section input {
   border-radius: 3px;
   outline: none;
   border: 1px solid #ccc;
-}
+}*/
