--- a/homebar.css
+++ b/homebar.css
@@ -21,6 +21,14 @@ overflow: hidden;
 .home{
     display: block;
     text-align: center;
+    width: 90%;
+    text-decoration: none;
+    background: rgba(227, 187, 188, 1);
+    color: black;
+    font-size: 1.2em;
+    font-weight: 600;
+    box-shadow: 0px 0px 40px black;
+   border-radius: 10px 10px 0 0;
    
 }
 
@@ -41,7 +49,7 @@ overflow: hidden;
 }
 
 .home li:last-child{
-    float: left;    
+    float: right;    
     border-right: none;
     border-left:1px solid black;
        padding: 25px 16px;
