--- a/homepage/home.css
+++ b/homepage/home.css
@@ -7,7 +7,6 @@ body
     background-position: right top;
     background-repeat: no-repeat;
     background-attachment: fixed;
-
 }
 
 section {
@@ -15,19 +14,24 @@ section {
     width: 90%;
     left: 5%;
     height: 100%;
-    box-shadow: 0px 0px 40px black;
+    box-shadow: 0 0 40px black;
     font-family: lato;
     color: #333;
-   border-radius: 10px;
     position: absolute;
+        border-radius: 0 0 10px 10px;
 }
 
-section header {
+/*section header {
 background: rgba(227, 187, 188, 1);
     color: black;
     font-size: 1.2em;
     font-weight: 600;
    border-radius: 10px 10px 0 0;
+}*/
+
+aside header{
+    border-radius: 0 0 0 0;
+    background: red;
 }
 
 footer {
