--- a/homebar.css
+++ b/homebar.css
@@ -1,23 +1,3 @@
-/*.home ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-overflow: hidden;
-
-}*/
-/*.home li a {
-        text-decoration: none;
-    float: left;    
-    border-right:1px solid black;
-}*/
-
-/*.home{
-    display: block;
-    color: red;
-    text-align: center;
-    padding: 25px 16px;
-}*/
-
 .home{
     display: block;
     text-align: center;
@@ -63,6 +43,11 @@ overflow: hidden;
      border-radius: 10px 0px 0 0;
 }
 
+.home .active:last-child {
+    background-color: rgba(245,226,220,1);
+     border-radius: 0 10px 0 0;
+}
+
 .home  li:hover{
     background-color:rgba(245,226,220,1);
 }
@@ -71,11 +56,8 @@ overflow: hidden;
     background-color:rgba(245,226,220,1);
       border-radius: 0px 10px 0 0;
 }
-/*nav li a:hover:not(.active) {
-    background-color:rgba(245,226,220,1);
-}
 
-/*nav li:first-child .active {
-    background-color: rgba(245,226,220,1);
-     border-radius: 10px 0px 0 0;
-} */
+.home  li:hover:first-child{
+    background-color:rgba(245,226,220,1);
+      border-radius: 10px 0 0 0;
+}
