--- a/homepage/home.css
+++ b/homepage/home.css
@@ -2,6 +2,7 @@ body
 {
     height: 100%;
     width: 100%;
+    margin-right: 5%;
     position: absolute;
     background-image: url("../srcimg/background.jpg");
     background-position: right top;
@@ -13,7 +14,6 @@ section {
     background: white;
     width: 90%;
     left: 5%;
-    height: 100%;
     box-shadow: 0 0 40px black;
     font-family: lato;
     color: #333;
@@ -45,6 +45,7 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
+    top: 100;
 }
 
 /*section label {
